<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="soulstudios.caloriecounter.FoodFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <worker8.com.github.radiogroupplus.RadioGroupPlus
            android:id="@+id/food_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_beer">

            <TableLayout
                android:id="@+id/food_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:id="@+id/food_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:text="@string/food_title"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:text="@string/cal_title"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black"
                        android:text="@string/icon_title"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_wine"
                        android:tag="wine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wine" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/wine_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/wine" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_martini"
                        android:tag="martini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/martini" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/martini_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/martini"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_beer"
                        android:tag="beer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beer" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/beer_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/beer"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_soda"
                        android:tag="soda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soda" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/soda_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/soda"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_burger"
                        android:tag="burger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/burger" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/burger_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/burger2"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_hotdog"
                        android:tag="hotdog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hotdog" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/hotdog_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/hotdog"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_sandwich"
                        android:tag="sandwich"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/sandwich" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/sandwich_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/sandwich"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_fries"
                        android:tag="fries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/fries_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/fries"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_pizza"
                        android:tag="pizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pizza" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/pizza_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/pizza2"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_icecream"
                        android:tag="icecream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icecream" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/icecream_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/icecream3"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_donut"
                        android:tag="donut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donut" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/donut_cal"/>

                    <ImageView
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:src="@drawable/donut"
                        />
                </TableRow>

            </TableLayout>
        </worker8.com.github.radiogroupplus.RadioGroupPlus>

    </LinearLayout>
</ScrollView>
